@@ -1,7 +1,7 @@
 
 if [[ -n "${CHOST}" ]]; then
 	/* 
-	 * We set the name of the more used tools to $CHOST-$GNU_TOOL.
+	 * We set the name of the most used tools to $CHOST-$GNU_TOOL.
 	 */
 	: ${CC:=${CHOST}-gcc}
 	: ${CXX:=${CHOST}-g++}
@@ -12,8 +12,14 @@ if [[ -n "${CHOST}" ]]; then
 	: ${NM:=${CHOST}-nm}
 	: ${RANLIB:=${CHOST}-ranlib}
 	: ${STRIP:=${CHOST}-strip}
-	export CROSS=yes
+fi
+
+/* 
+ * We could have a CHOST (and we should) without being cross-compiling.
+ */
+if [[ "$CHOST" != "$MACHTYPE-$VENDOR-$OSTYPE" ]]; then
+	export CROSS=true
 else
-	export CROSS=no
+	export CROSS=false
 fi
 
